[tool.poetry]
name = "isaacgymenvs"
version = "0.1.0"
description = ""
authors = ["Costa Huang <costa.huang@outlook.com>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
gym = "0.23.1"
omegaconf = "^2.2.2"
termcolor = "^1.1.0"
hydra-core = "^1.2.0"
PyVirtualDisplay = "^3.0"
rl-games = "1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
